--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
+    "socket.io": "^2.3.0",
     "uniqid": "^5.2.0"
   },
   "devDependencies": {
